--- a/placebo_crawler/scrapy.cfg
+++ b/placebo_crawler/scrapy.cfg
@@ -7,5 +7,5 @@
 default = placebo_crawler.settings
 
 [deploy]
-#url = http://localhost:6800/
+url = http://localhost:6800/
 project = placebo_crawler
